Successful Username-Password login and signup

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "gifted409df3ec": {
+    "Gifted": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
@@ -12,9 +12,7 @@
         ],
         "usernameAttributes": [],
         "signupAttributes": [
-          "EMAIL",
-          "NAME",
-          "PICTURE"
+          "EMAIL"
         ],
         "passwordProtectionSettings": {
           "passwordPolicyMinLength": 8,
