Updated with ListItem Details Access

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -50,5 +50,12 @@
         }
       }
     }
+  },
+  "storage": {
+    "s3giftedstoragefadb757a": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": []
+    }
   }
 }
