--- a/Gifted/Info.plist
+++ b/Gifted/Info.plist
@@ -2,15 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UILaunchScreen</key>
-	<dict>
-		<key>UIImageName</key>
-		<string>clearIcon</string>
-		<key>UIImageRespectsSafeAreaInsets</key>
-		<true/>
-		<key>UIColorName</key>
-		<string>White</string>
-	</dict>
+	<key>UILaunchImageFile</key>
+	<string>LaunchImage.launchimage</string>
 	<key>CFBundleIdentifier</key>
 	<string></string>
 	<key>CFBundleURLTypes</key>
