Updated signup to include User's name

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,30 +1,4 @@
 {
-  "auth": {
-    "HatchlingTurtle": {
-      "service": "Cognito",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [],
-      "customAuth": false,
-      "frontendAuthConfig": {
-        "socialProviders": [],
-        "usernameAttributes": [],
-        "signupAttributes": [
-          "EMAIL"
-        ],
-        "passwordProtectionSettings": {
-          "passwordPolicyMinLength": 8,
-          "passwordPolicyCharacters": []
-        },
-        "mfaConfiguration": "OFF",
-        "mfaTypes": [
-          "SMS"
-        ],
-        "verificationMechanisms": [
-          "EMAIL"
-        ]
-      }
-    }
-  },
   "api": {
     "HatchlingTurtle": {
       "service": "AppSync",
@@ -48,8 +22,35 @@
       }
     }
   },
+  "auth": {
+    "HatchlingTurtle": {
+      "service": "Cognito",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [],
+      "customAuth": false,
+      "frontendAuthConfig": {
+        "socialProviders": [],
+        "usernameAttributes": [],
+        "signupAttributes": [
+          "EMAIL",
+          "NAME"
+        ],
+        "passwordProtectionSettings": {
+          "passwordPolicyMinLength": 8,
+          "passwordPolicyCharacters": []
+        },
+        "mfaConfiguration": "OFF",
+        "mfaTypes": [
+          "SMS"
+        ],
+        "verificationMechanisms": [
+          "EMAIL"
+        ]
+      }
+    }
+  },
   "storage": {
-    "s3hatchlingturtlestorage47b07fb4": {
+    "s3hatchlingturtlestoragec3f4068f": {
       "service": "S3",
       "providerPlugin": "awscloudformation",
       "dependsOn": []
